@@ -1,3 +1,9 @@
+-- NitrousTracker DEV --
+
+Fixes:
+
+- [#117] Fix "map samples" button UI overlap
+
 -- NitrousTracker v0.4.12 (2024-11-10)
 
 New features:
